# ngs-genepii

./: .gitignore  README.md  debian-ngs.def  ngs.def
genepii-app/: .env.example  composer.json  identifiantcrypt  identifiantcrypt2  package-lock.json  package.json
genepii-app/app/Models/: BioinfoResult.php  BioinfoRun.php  Extraction.php  File.php  MedicalFile.php  NextcladeResult.php  PangolinResult.php  Patient.php  PipelineSet.php  Plate.php  Sample.php  SamplerLaboratory.php  Samplesheet.php  SenderLaboratory.php  SequencingInfo.php  SequencingRun.php  SummaryResult.php  User.php  ValidationResult.php
genepii-app/config/: app.php  auth.php  ldap.php
genepii-app/database/factories/: BioinfoResultFactory.php  BioinfoRunFactory.php  ExtractionFactory.php  (+9 more)
genepii-app/routes/: web.php
genepii-app/src/package_genepii/: README.md  main.py  pyproject.toml  settings.json
genepii-app/src/package_genepii/commands/: emergen.py  export.py  extract.py  format.py  insert.py  test.py
genepii-app/src/package_genepii/corres/: AUTO_IDS-0.0.1.csv  CHOICE_COLUMNS-0.0.1.csv  DB_COLUMNS-0.0.1.csv  EMERGEN-0.0.1.csv  FILE_DF_COLUMNS-0.0.1.csv  FORMATS-0.0.1.csv  REQUIRED-0.0.1.csv  SENDER_LABS-0.0.1.csv  SERIOUS_CASES-0.0.1.csv
genepii-app/src/package_genepii/database/: dbClass.py  exportClass.py  tablesClass.py
genepii-app/src/package_genepii/emergen/: emergenClass.py
genepii-app/src/package_genepii/extract/: extract.py
genepii-app/src/package_genepii/format/: complete.py  create.py  datesClass.py  delays.py  encrypt.py  format.py  formatClass.py  merge.py
(+82 files in other folders)
