[tool.poetry]
name = "package_genepii"
version = "0.1.0"
description = "Manage Genepii database"
authors = ["Cassandre Héritier--Tellier on DI3955SU.chu-lyon.fr <genepii@DI3955SU.chu-lyon.fr.chu-lyon.fr>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.2"
openpyxl = "^3.0.9"
mysql-connector-python = "^8.0.29"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
